--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,3 +32,22 @@
 .link-default:hover{
     color: #4c79d3;
 }
+
+/* index */
+
+#app{
+    background: linear-gradient(120deg, #fff 44.9% ,#4c79d3 45%) no-repeat fixed ;
+}
+header{
+    border-bottom: 1px solid #bebcbc;
+    padding: 5px;
+    background-color: #fff;
+}
+
+.color-primary{
+    color: #4e0070;
+}
+
+.color-secondary{
+        color: #4c79d3;
+}
