--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -51,3 +51,8 @@ header{
 .color-secondary{
         color: #4c79d3;
 }
+.icon-detail{
+    font-size: 50px;
+    margin-right: 10px;
+    vertical-align: middle;
+}
