--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -56,3 +56,20 @@ header{
     margin-right: 10px;
     vertical-align: middle;
 }
+
+.info{
+    background-color: #fff;
+    border-radius: 20px 20px 0px 0px;
+    padding-top: 20px;
+}
+
+.button-default{
+    border-radius: 10px;
+    background-color: #4e0070;     
+    color: #fff;                                                   
+}
+
+.button-default:hover{
+    background-color: #4c79d3;
+    color: #fff
+}
