--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -73,3 +73,22 @@ header{
     background-color: #4c79d3;
     color: #fff
 }
+
+.button-float{
+    border-radius: 100%;
+    height: 60px;
+    width: 60px;
+    padding: 0 !important;
+    position: fixed;
+    bottom: 1rem;
+    right: 2rem;
+    border: 2px solid #4e0070;
+    font-size: 35px;
+    background-color: #4e0070;
+    color: #fff;
+}
+.button-float:hover{
+    border: 2px solid #4c79d3;
+    background-color: #fff;
+    color: #4c79d3;
+}
